add_executable(cnerium_router_example_01 01_basic.cpp)
target_link_libraries(cnerium_router_example_01 PRIVATE cnerium::router)
target_compile_features(cnerium_router_example_01 PRIVATE cxx_std_20)

add_executable(cnerium_router_example_02 02_dynamic_params.cpp)
target_link_libraries(cnerium_router_example_02 PRIVATE cnerium::router)
target_compile_features(cnerium_router_example_02 PRIVATE cxx_std_20)

add_executable(cnerium_router_example_03 03_multiple_routes.cpp)
target_link_libraries(cnerium_router_example_03 PRIVATE cnerium::router)
target_compile_features(cnerium_router_example_03 PRIVATE cxx_std_20)

add_executable(cnerium_router_example_04 04_methods.cpp)
target_link_libraries(cnerium_router_example_04 PRIVATE cnerium::router)
target_compile_features(cnerium_router_example_04 PRIVATE cxx_std_20)

add_executable(cnerium_router_example_05 05_priority.cpp)
target_link_libraries(cnerium_router_example_05 PRIVATE cnerium::router)
target_compile_features(cnerium_router_example_05 PRIVATE cxx_std_20)

add_executable(cnerium_router_example_06 06_full_demo.cpp)
target_link_libraries(cnerium_router_example_06 PRIVATE cnerium::router)
target_compile_features(cnerium_router_example_06 PRIVATE cxx_std_20)
