function(cnerium_router_configure_example target source)
    add_executable(${target} ${source})
    target_link_libraries(${target} PRIVATE cnerium::router)
    target_compile_features(${target} PRIVATE cxx_std_20)

    if(MSVC)
        target_compile_options(${target} PRIVATE /W4 /permissive-)
    else()
        target_compile_options(${target} PRIVATE -Wall -Wextra -Wpedantic)
    endif()
endfunction()

cnerium_router_configure_example(cnerium_router_example_01 01_basic.cpp)
cnerium_router_configure_example(cnerium_router_example_02 02_dynamic_params.cpp)
cnerium_router_configure_example(cnerium_router_example_03 03_multiple_routes.cpp)
cnerium_router_configure_example(cnerium_router_example_04 04_methods.cpp)
cnerium_router_configure_example(cnerium_router_example_05 05_priority.cpp)
cnerium_router_configure_example(cnerium_router_example_06 06_full_demo.cpp)
